Dev GoDCR nits + dcrlibwallet

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -269,15 +269,23 @@ _[GoDCR](https://github.com/planetdecred/godcr) is a lightweight desktop GUI wal
 
 { _Check https://github.com/planetdecred/godcr/commits/master ._}
 
-- Added function to dcrlibwallet to save [TSpend voting policy]({253}) locally and in VSPs managing the tickets.
-- Disable receive, send and mixer navigation option for [watch only wallets](https://github.com/planetdecred/godcr/pull/1051).
-- Fix to top navigation [dark mode](https://github.com/planetdecred/godcr/pull/1049).
-- Fix [app crash](https://github.com/planetdecred/godcr/pull/1048) after wallet restore is complete.
-- Add v2 [wallet settings page](https://github.com/planetdecred/godcr/pull/1036).
-- Fix crash in [proposal details](https://github.com/planetdecred/godcr/pull/1045).
-- Update [top-level setting page](https://github.com/planetdecred/godcr/pull/1035) UI v2.
-- Implement [layout for treasury spending](https://github.com/planetdecred/godcr/pull/975). (image candidate).
-- Update [color and icon](https://github.com/planetdecred/godcr/pull/1028) on top bar navigation.
+- Disabled Receive, Send and Mixer pages for [watch-only wallets](https://github.com/planetdecred/godcr/pull/1051).
+- Fixed top bar text color in [dark mode](https://github.com/planetdecred/godcr/pull/1049).
+- Fixed [app crash](https://github.com/planetdecred/godcr/pull/1048) after wallet restore is complete.
+- Updated [wallet Settings page](https://github.com/planetdecred/godcr/pull/1036) to v2 UI design.
+- Fixed crash in [proposal details](https://github.com/planetdecred/godcr/pull/1045) when parsing a specific bit of Markdown.
+- Updated [top-level Settings page](https://github.com/planetdecred/godcr/pull/1035) to v2 UI design.
+- Implemented [layout for treasury spending](https://github.com/planetdecred/godcr/pull/975).
+- Updated [color and icon](https://github.com/planetdecred/godcr/pull/1028) on the top bar.
+
+dcrlibwallet shared library:
+
+- Added function to save [TSpend voting policy](https://github.com/planetdecred/dcrlibwallet/pull/253) locally and in VSPs managing the tickets.
+- Updated [dcrwallet](https://github.com/planetdecred/dcrlibwallet/pull/263) dependency.
+- Extracted Politeia into a [standalone package](https://github.com/planetdecred/dcrlibwallet/pull/262).
+- Implemented API for fetching data from [external services](https://github.com/planetdecred/dcrlibwallet/pull/255) such as the dcrdata block explorer and exchanges.
+
+{ image candidates: 975 1036 }
 
 
 ### dcrdata
