Dev checked other repos

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -336,20 +336,10 @@ Other site changes:
 
 { image of the new website is a must! }
 
-{ _Check for other new/updated repos in:_
-
-- _. https://github.com/orgs/decred/repositories ._
-- _. https://github.com/orgs/planetdecred/repositories ._
-- _. https://github.com/orgs/raedahgroup/repositories ._
-
-}
-
-
 ### Other
 
-- { _Smaller/common things go here._ }
-- { _More exotic dev sources: https://github.com/xaur/decred-news/blob/docs/sources.md#development ._ }
 - Updated to [Go 1.19](https://tip.golang.org/doc/go1.19) and dropped support for 1.17 in various repos.
+- Android and iOS mobile wallets have been [removed](https://bounty.decred.org/2022/08/mobile-wallets-no-longer-in-scope/) from the Bug Bounty program's scope.
 
 
 ## People
