--- a/journal/202208.md
+++ b/journal/202208.md
@@ -78,17 +78,17 @@ dcrd v1.7.4 was released to fix testnet mining algorithm as detailed below. It w
 
 Merged in `master` and backported to v1.7.4 release:
 
-- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, a bunch of ASICs joined Decred tesnet and ramped up the difficulty, which effectively stalled the network. To limit the type of games that ASICs can play on testnet two new rules are introduced: limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply. Finally, this change will invalidate the high-work chain which has stalled testnet.
-  - { _Do we know how many Th/s or ASIC units were used to stall testnet?_ }
-- Modified handling of too few block voters to also [copy the regular transactions](https://github.com/decred/dcrd/pull/2978/commits/659b7fed1f225861b8b689ead1a0466099992479) into an alternative block template in addition to the stake transactions. This makes template creation more robust in the case of duplicate spends and helps ensure that all transactions in an invalidated (under-voted) block are added to the alternative block templates.
-  - { _It was part of #2978 but I felt it's fun to write about. If it's minor, we can just drop it. If keeping, how did it work without copying regular tx before? Did those tx make it into alternative blocks regardless, just not as efficiently?_ }
+- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, a bunch of ASICs joined Decred tesnet and ramped up the difficulty, which effectively stalled the network. To limit thea type of games that ASICs can play on testnet two new rules are introduced: a limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply. Finally, this change will invalidate the high-work chain which has stalled testnet.
+  - { _Do we know how many Th/s or ASIC units were used to stall testnet? Any other details to entertain the reader with?_ }
+
+- Modified handling of blocks with too few voting tickets to also [copy the regular transactions](https://github.com/decred/dcrd/pull/2978/commits/659b7fed1f225861b8b689ead1a0466099992479) into an alternative block template in addition to the stake transactions. This makes template creation more robust in the case of duplicate spends and helps ensure that all transactions in an invalidated (under-voted) block are added to the alternative block templates.
+  - { _It was part of #2978 but I felt it's fun to write about. If it's minor, we can just drop it. If keeping, how did it work without copying regular tx before? Did those tx make it into alternative blocks in some other way?_ }
 
 Merged in `master` towards v1.8:
 
 - Made longer running `blockchain` tests [run in parallel](https://github.com/decred/dcrd/pull/2988) to reduce the overall testing time roughly in half.
 - Removed all code related to [previous script snapshots](https://github.com/decred/dcrd/pull/2989) now that address index has been removed and there are no other indexers that require access to previous scripts.
-- Maintenance { 2980 2983 2981 }
-- Small fixes { 2987, 2991 - may merge with maintenance }
+- Maintenance { 2980 2983 2981 } and small fixes { 2987, 2991 }.
 
 
 ### dcrwallet
@@ -128,7 +128,7 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 - Added the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
 - Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code to verify them.
 - Renamed "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
-- 4 fixes { 3783 3775 3784 3792 } and various backend updates.
+- 4 fixes { 3783 3775 3784 3792 } and various internal updates.
 
 
 ### Politeia
@@ -150,7 +150,7 @@ Backend:
 - Various [updates](https://github.com/decred/politeia/pull/1672) for Go 1.19 (CI configuration, GitHub Actions, linter, and [code formatting](https://github.com/decred/politeia/pull/1673)).
 - Delete [expired user sessions](https://github.com/decred/politeia/pull/1669) on startup. Tests for the session database have been [rewritten](https://github.com/decred/politeia/pull/1674) to fix numerous issues.
 - Updated [`dbutil -dump`](https://github.com/decred/politeia/pull/1676) command to work with all of the user database implementations.
-- Freeze [Trillian trees](https://github.com/decred/politeia/pull/1670) that correspond to Politeia records that no longer allow updates (such as Censored or Archived). Politeia's use of Trillian is quite different from it's intended use case and it results in high CPU load. Freezing some trees should reduce it.
+- Freeze [Trillian trees](https://github.com/decred/politeia/pull/1670) that correspond to Politeia records that no longer allow updates (such as Censored or Archived). Politeia's use of Trillian is quite different from its intended use case and it results in high CPU load. Freezing some trees should reduce it.
 - Fixes { 1675 }
 
 Current GUI:
@@ -165,7 +165,7 @@ GUI remake on the new [plugin architecture](https://github.com/decred/politeiagu
 - Added various information to the `pi` plugin: proposal status, vote duration, quorum, billing status changes, and error messages.
 - Added [end-to-end tests](https://github.com/decred/politeiagui/pull/2803) based on Cypress.
 - Implemented RFP [proposals and submissions](https://github.com/decred/politeiagui/pull/2848).
-- Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui (these control at which screen width the layout changes to one that better fits user's screen size).
+- Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui. Breakpoints control which layout is used to better match the user's screen size.
 - Fixes { 2839 2853x3 2850 }
 - Code refactoring and cleanup { 2834 2843 2854 }
 
@@ -226,19 +226,19 @@ Preparations and fixes for the v0.5 release:
 Changes towards the next v0.6 release:
 
 - End user (trader) documentation [moved](https://github.com/decred/dcrdex/pull/1715) to [its own document](https://github.com/decred/dcrdex/blob/master/docs/wiki/Client-Installation-and-Configuration.md).
-- Use epoch's first and last [match price](https://github.com/decred/dcrdex/pull/1781) for candle's start and end rate. This will produce more accurate candlestick chart.
+- Improved candlestick chart accuracy by using epoch's first and last [match price](https://github.com/decred/dcrdex/pull/1781) for candle's start and end rate.
 - Restyled the [Wallets page](https://github.com/decred/dcrdex/pull/1700). The new style is responsive and adjusts to desktop, tablet and mobile screen sizes.
 - Server installation guide [moved](https://github.com/decred/dcrdex/pull/1793) to [its own document](https://github.com/decred/dcrdex/blob/master/docs/wiki/Server-Installation.md).
 - Updated [dependencies](https://github.com/decred/dcrdex/pull/1785) to latest btcsuite, go-ethereum, go-bip39 and minimum Go 1.18.
 - Added a guide to get started with [writing fuzzing tests](https://github.com/decred/dcrdex/pull/1766).
 - Automated [Markdown linting](https://github.com/decred/dcrdex/pull/1796) to ensure consistent formatting.
-- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761) { _minor_ }
-- Adjusted [order cancellation](https://github.com/decred/dcrdex/pull/1682) policy to penalize too fast cancellations, but if the order sits for one full epoch it can be cancelled for "free" (without hurting user's reputation score). This should improve trading experience [for humans](https://github.com/decred/dcrdex/pull/1682#issuecomment-1165059876).
+- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761). { _minor_ }
+- Adjusted [order cancellation](https://github.com/decred/dcrdex/pull/1682) policy to penalize too fast cancellations. If the order sits for at least one full epoch it can still be cancelled for "free" (without hurting user's reputation score). This should improve trading experience [for humans](https://github.com/decred/dcrdex/pull/1682#issuecomment-1165059876).
 - Transaction wait time made [configurable](https://github.com/decred/dcrdex/pull/1789) by server operator. It is the maximum time server will search for client-reported transactions before erroring.
-- Updated Node.js [dependencies](https://github.com/decred/dcrdex/pull/1792) for v0.6 dev cycle.
+- Updated Node.js [dependencies](https://github.com/decred/dcrdex/pull/1792) for the v0.6 dev cycle.
 - Implemented [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1786) for DCR and ETH. It allows to correctly track locked coins across changes to wallet configuration.
 - Fixed [API errors](https://github.com/decred/dcrdex/pull/1806) showing up in bell notifications.
-- Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating/adding new languages.
+- Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating translations or adding new languages.
 - Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822). { _group in maintenance?_ }
 - Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 }
 - Maintenance { 1795 1801 }
