Dev DCRDEX releases

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -106,12 +106,10 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 
 _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
-{ _Check https://github.com/decred/decrediton/commits/master ._}
-
 - Added the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
 - Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code to verify them.
 - Renamed "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
-- 4 fixes { 3783 3775 3784 3792 } and various internal updates.
+- 4 fixes { 3783 3775 3784 3792 } and other internal updates.
 
 
 ### Politeia
@@ -174,6 +172,10 @@ LN Daemon:
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
+DCRDEX v0.5.2 has been released! Check the [v0.5.0 release](https://github.com/decred/dcrdex/releases/tag/v0.5.0) first for a long list of features, fixes and upgrading instructions since v0.4. Starting with the [v0.5.2 release](https://github.com/decred/dcrdex/releases/tag/v0.5.2) DCRDEX now publishes its own binaries. As always, [verifying them](https://docs.decred.org/advanced/verifying-binaries) is strongly recommended.
+
+Note that there has been no announcement yet because DCRDEX is coordinating with the other components (such as Decrediton).
+
 Preparations and fixes for the v0.5 release:
 
 - Moved [wiki contents](https://github.com/decred/dcrdex/pull/1714) to [docs/wiki](https://github.com/decred/dcrdex/tree/master/docs/wiki) in the main repo. Now all docs are in one place and can be updated and reviewed by more contributors via the pull request workflow.
@@ -218,16 +220,6 @@ Changes towards the next v0.6 release:
 Ethereum support:
 
 - Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent chain (such as Ethereum).
-
-{ _Cover v0.5.0, v0.5.1 and v0.5.2 released on Aug 29_
-
-- https://github.com/decred/dcrdex/releases/tag/v0.5.0
-  - There is a TODO for Server - shall we call it "released" yet?
-- https://github.com/decred/dcrdex/releases/tag/v0.5.1
-- https://github.com/decred/dcrdex/releases/tag/v0.5.2
-- Are binaries now produced by DCRDEX itself?
-
-}
 
 { _Better group changes_ }
 
