Dev improve grouping and move fixes to the end

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -176,25 +176,31 @@ DCRDEX v0.5.2 has been released! Check the [v0.5.0 release](https://github.com/d
 
 Note that there has been no announcement yet because DCRDEX is coordinating with the other components (such as Decrediton).
 
-Preparations and fixes for the v0.5 release:
+{ _Improve grouping maybe_ }
+
+August changes included in the v0.5 release:
 
 - Moved [wiki contents](https://github.com/decred/dcrdex/pull/1714) to [docs/wiki](https://github.com/decred/dcrdex/tree/master/docs/wiki) in the main repo. Now all docs are in one place and can be updated and reviewed by more contributors via the pull request workflow.
+- Rewritten much of [README](https://github.com/decred/dcrdex/pull/1747) for the v0.5 release.
+- Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
+- Embed site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
+- Updated [German](https://github.com/decred/dcrdex/pull/1815) translation.
+- Maintenance { 1753 1774 }
+
+Fixes included in v0.5:
+
 - Fixed confusing "connectivity restored" [notification](https://github.com/decred/dcrdex/pull/1719) on first connection. { _minor_ }
 - Fixed canceled orders showing as [100% filled](https://github.com/decred/dcrdex/pull/1744) { _minor_ }
 - Fixed several client wallet [hanging issues](https://github.com/decred/dcrdex/pull/1732).
 - Fixed a [deadlock](https://github.com/decred/dcrdex/pull/1756) in BTC SPV wallet. { _minor?_ }
 - Fixed [switching wallet type](https://github.com/decred/dcrdex/pull/1759) to SPV.
-- Rewritten much of [README](https://github.com/decred/dcrdex/pull/1747) for the v0.5 release.
 - Fixed several [deadlock and lock contention](https://github.com/decred/dcrdex/pull/1739) issues in the trade engine.
 - Fixed having to [refresh Wallets page](https://github.com/decred/dcrdex/pull/1757) manually after creating a wallet.
 - Fixed incorrect [error return](https://github.com/decred/dcrdex/pull/1764) when looking up BTC outputs. { _minor_ }
-- Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
 - Fixed [match status](https://github.com/decred/dcrdex/pull/1772) display for revoked matches.
-- Embed site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
 - Fixed [changing DEX server](https://github.com/decred/dcrdex/pull/1817) when the server is down. { _minor?_ }
-- Backend fixes { 1751 1780 }
-- Client fixes { 1736x2 1776 1799 1821 1829 }
-- Maintenance { 1753 1774 }
+- Other backend fixes { 1751 1780 }
+- Other client fixes { 1736x2 1776 1799 1821 1829 }
 
 Changes towards the next v0.6 release:
 
@@ -205,23 +211,21 @@ Changes towards the next v0.6 release:
 - Updated [dependencies](https://github.com/decred/dcrdex/pull/1785) to latest btcsuite, go-ethereum, go-bip39 and minimum Go 1.18.
 - Added a guide to get started with [writing fuzzing tests](https://github.com/decred/dcrdex/pull/1766).
 - Automated [Markdown linting](https://github.com/decred/dcrdex/pull/1796) to ensure consistent formatting.
-- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761). { _minor_ }
 - Adjusted [order cancellation](https://github.com/decred/dcrdex/pull/1682) policy to penalize too fast cancellations. If the order sits for at least one full epoch it can still be cancelled for "free" (without hurting user's reputation score). This should improve trading experience [for humans](https://github.com/decred/dcrdex/pull/1682#issuecomment-1165059876).
 - Transaction wait time made [configurable](https://github.com/decred/dcrdex/pull/1789) by server operator. It is the maximum time server will search for client-reported transactions before erroring.
 - Updated Node.js [dependencies](https://github.com/decred/dcrdex/pull/1792) for the v0.6 dev cycle.
 - Implemented [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1786) for DCR and ETH. It allows to correctly track locked coins across changes to wallet configuration.
-- Fixed [API errors](https://github.com/decred/dcrdex/pull/1806) showing up in bell notifications.
 - Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating translations or adding new languages.
 - Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822). { _group in maintenance?_ }
-- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 }
 - Maintenance { 1795 1801 }
+- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761). { _minor_ }
+- Fixed [API errors](https://github.com/decred/dcrdex/pull/1806) showing up in bell notifications.
+- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 }
 - Fixes { 1802 1809 }
 
 Ethereum support:
 
 - Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent chain (such as Ethereum).
-
-{ _Better group changes_ }
 
 { image candidates: illustration of 1622 would be cool, 1700 (!) }
 
@@ -231,13 +235,13 @@ Ethereum support:
 _[GoDCR](https://github.com/planetdecred/godcr) is a lightweight desktop GUI wallet with integrated staking, privacy, Politeia voting, consensus voting, and more._
 
 - Disabled Receive, Send and Mixer pages for [watch-only wallets](https://github.com/planetdecred/godcr/pull/1051).
-- Fixed top bar text color in [dark mode](https://github.com/planetdecred/godcr/pull/1049).
-- Fixed [app crash](https://github.com/planetdecred/godcr/pull/1048) after wallet restore is complete.
 - Updated [wallet Settings page](https://github.com/planetdecred/godcr/pull/1036) to v2 UI design.
-- Fixed crash in [proposal details](https://github.com/planetdecred/godcr/pull/1045) when parsing a specific bit of Markdown.
 - Updated [top-level Settings page](https://github.com/planetdecred/godcr/pull/1035) to v2 UI design.
 - Implemented [layout for treasury spending](https://github.com/planetdecred/godcr/pull/975).
 - Updated [color and icon](https://github.com/planetdecred/godcr/pull/1028) on the top bar.
+- Fixed crash in [proposal details](https://github.com/planetdecred/godcr/pull/1045) when parsing a specific bit of Markdown.
+- Fixed [app crash](https://github.com/planetdecred/godcr/pull/1048) after wallet restore is complete.
+- Fixed top bar text color in [dark mode](https://github.com/planetdecred/godcr/pull/1049).
 
 dcrlibwallet shared library:
 
@@ -253,9 +257,9 @@ dcrlibwallet shared library:
 
 _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
 
-- [Fixed](https://github.com/decred/dcrdata/pull/1929) treasury pagination in explorer.
-- Fixed [incorrect treasury](https://github.com/decred/dcrdata/pull/1930) balance on home page.
 - Dependency and toolchain [updates](https://github.com/decred/dcrdata/pull/1931).
+- Fixed treasury transaction [pagination](https://github.com/decred/dcrdata/pull/1929).
+- Fixed [incorrect treasury](https://github.com/decred/dcrdata/pull/1930) balance on home page.
 - 3 smaller bug fixes. { 1926 1927 1928 }
 
 
