add non-english video details

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -495,9 +495,9 @@ Decred Magazine engagement stats for August:
 
 **Non-English content:**
 
-- [Decred Video in Arabic](https://www.youtube.com/watch?v=B8Y3-z9Bs9A)
-- [Coin des Tages: Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by @KryptoZenny
-- [DCR DecreD EXPLOSE 😱🚀 J'ACHETE OU PAS?🤔 DOSSIER COMPLET](https://www.youtube.com/watch?v=6cWhwYQ9tbE) by @Crypto for EveryOne
+- [What is the Decred Digital Token Project? {Decred Video in Arabic)](https://www.youtube.com/watch?v=B8Y3-z9Bs9A) by @Be Coin
+- [Coin des Tages (Coin of the Day): Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by @KryptoZenny
+- [DCR DecreD EXPLOSE J'ACHETE OU PAS?(Decred exploding, buy or not?)](https://www.youtube.com/watch?v=6cWhwYQ9tbE) by @Crypto for EveryOne
 
 
 ## Discussions
