--- a/journal/202208.md
+++ b/journal/202208.md
@@ -469,7 +469,10 @@ Decred Magazine engagement stats for August:
 
 **Selected articles:**
 
-- {}
+- [Introducing Decred Community Member João Paulo Sant’Anna](https://www.decredmagazine.com/introducing-decred-community-member-joao-paulo-santanna/) by @DecredSociety
+- [Introducing Decred Developer Philemon](https://www.decredmagazine.com/introducing-decred-developer-philemon/) by @DecredSociety
+- [How Decred contributed to a more transparent election in Brazil](https://www.decredmagazine.com/how-decred-how-decred-contributed-to-a-more-transparent-election-in-brazil/) by @Joao Paulo Sant'Anna da Silva
+- [Peer-to-Peer Electronic Corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra
 
 **Videos:**
 
@@ -487,7 +490,8 @@ Decred Magazine engagement stats for August:
 
 **Art and fun:**
 
-- [New Website TikTok](https://twitter.com/exitusdcr/status/1565090356651237379)
+- [New Website TikTok](https://twitter.com/exitusdcr/status/1565090356651237379) by @DCRDajana
+- [Decred Heartbeat](https://www.decredmagazine.com/decred-heartbeat/) by @OfficialCryptos
 
 **Translations:**
 
@@ -515,16 +519,16 @@ Selected Reddit posts:
 Selected Twitter discussions:
 
 - @elima_iii has a [draft of his research paper, which focuses on Decred and the proposed Responsible Financial Innovation Act](https://twitter.com/elima_iii/status/1563655328209723404).
-- @DecredSociety has a [thread on his experiences using the DCRDEX to sell DCR for BTC using the platform's atomic swap technology](https://twitter.com/DecredSociety/status/1564625492795441153?s=20&t=QvVPuyQNRR9ONzUfPlqsgg).
+- @DecredSociety has a [thread on his experiences using the DCRDEX to sell DCR for BTC using the platform's atomic-swap technology](https://twitter.com/DecredSociety/status/1564625492795441153?s=20&t=QvVPuyQNRR9ONzUfPlqsgg).
 
 
 ## Markets
 
-In August DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In August DCR was trading between USD 25.60-70.40 / BTC 0.001139-0.003059. The average daily rate was $31.93.
 
-{ _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
+Research & Analytics:
 
-{ _DCRDEX updates, esp. trading volume dynamics._ }
+[Inflection points](https://www.decredmagazine.com/inflection-points/) by @Applesaucesome
 
 
 ## Relevant External
