Net rebase on bochinchero's numbers

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -364,7 +364,7 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 _Image: { hashrate chart }_
 
-Distribution of 79 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 66%, F2Pool 25%, BTC.com 5%, AntPool 3.4%, CoinMine 0.8%.
+Distribution of 75 Ph/s hashrate [reported](https://poolbay.io/crypto/54/decred) by the pools on Sep 1: Poolin 65%, F2Pool 26%, BTC.com 5.5%, AntPool 3.5%, CoinMine 0.6%.
 
 { _Hint: Fallback link for pool distribution: https://dcrstats.com/pow ._ }
 
@@ -378,13 +378,13 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: On Sep 1, ~7,140 (-30) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.7% of the ticket pool (+0.3%).
+**VSP**: On Sep 1, ~7,050 (-120) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.3% of the ticket pool (-0.1%).
 
 _Image: { vsp live ticket distribution }_
 
-**Nodes**: Throughout August there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
+**Nodes**: Throughout August there were around {} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
-Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Sep 1 (166 total, dcrd only): v1.7.1 - 31%, v1.7.2 - 31%, v1.7.4 - 17%, v1.7.0 - 8%, v1.8.0 dev builds - 2%, v1.7.0 dev builds - 1%, other - 10%.
+Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Sep 1 (176 total, dcrd only): v1.7.1 - 31%, v1.7.2 - 29%, v1.7.4 - 18%, v1.7.0 - 8.5%, v1.8.0 dev builds - 3%, v1.7.0 dev builds - 1%, other - 10%.
 
 _Image: { node version distribution }_
 
