--- a/journal/202208.md
+++ b/journal/202208.md
@@ -438,20 +438,20 @@ Decred Magazine engagement stats for August:
 
 **Selected articles:**
 
-- [Introducing Decred Community Member João Paulo Sant’Anna](https://www.decredmagazine.com/introducing-decred-community-member-joao-paulo-santanna/) by @DecredSociety
-- [Introducing Decred Developer Philemon](https://www.decredmagazine.com/introducing-decred-developer-philemon/) by @DecredSociety
+- [Introducing Decred community member João Paulo Sant'Anna](https://www.decredmagazine.com/introducing-decred-community-member-joao-paulo-santanna/) by @phoenixgreen
+- [Introducing Decred developer Philemon](https://www.decredmagazine.com/introducing-decred-developer-philemon/) by @phoenixgreen
 - [How Decred contributed to a more transparent election in Brazil](https://www.decredmagazine.com/how-decred-how-decred-contributed-to-a-more-transparent-election-in-brazil/) by @JoaoPauloSantAnnadaSilva
-- [Peer-to-Peer Electronic Corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra
+- [Peer-to-peer electronic corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra
 
 **Videos:**
 
 { _Scan https://www.youtube.com/results?search_query=decred&sp=CAI%253D ._ }
 
-- [Decentralised Treasury Spending - Decred Fundamentals](https://youtu.be/A0NR5ySIqoI) by @DecredSociety
-- [DCRDATA Decred's Treasury - Decred Fundamentals](https://youtu.be/lQebfO6qIoo) by @DecredSociety
-- [Why Decred Will Explode! $DCR Crypto Price Prediction!](https://www.youtube.com/watch?v=0PerKqUmmfU) by @Minted Max (It's actually a good video, not typical price talk)
-- [Decred and the future of web3 - State of the market with BlockchainBuck](https://youtu.be/n3welZEDchU) by @DecredSociety and @Exitus
-- [Decred News Update - Development Work Surging Across Many Repos - LN,  DCRDEX, Politeia, DAO & More](https://youtu.be/EPcUkmaaJlQ) by @Exitus
+- [Decentralised treasury spending - Decred Fundamentals](https://www.youtube.com/watch?v=A0NR5ySIqoI) by @phoenixgreen
+- [DCRDATA Decred's treasury - Decred Fundamentals](https://www.youtube.com/watch?v=lQebfO6qIoo) by @phoenixgreen
+- [Why Decred will explode! $DCR crypto price prediction!](https://www.youtube.com/watch?v=0PerKqUmmfU) by Minted Max - not a typical price talk video.
+- [Decred and the future of web3 - State of the market with BlockchainBuck](https://www.youtube.com/watch?v=n3welZEDchU) by @phoenixgreen and @Exitus
+- [Decred News Update - Development work surging across many repos - LN, DCRDEX, Politeia, DAO & more](https://www.youtube.com/watch?v=EPcUkmaaJlQ) by @Exitus
 
 **Audio:**
 
@@ -468,9 +468,9 @@ Decred Magazine engagement stats for August:
 
 **Non-English content:**
 
-- [What is the Decred Digital Token Project? {Decred Video in Arabic)](https://www.youtube.com/watch?v=B8Y3-z9Bs9A) by @BeCoin
-- [Coin des Tages (Coin of the Day): Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by @KryptoZenny
-- [DCR DecreD EXPLOSE J'ACHETE OU PAS?(Decred exploding, buy or not?)](https://www.youtube.com/watch?v=6cWhwYQ9tbE) by @CryptoforEveryOne
+- [What is the Decred digital token project?](https://www.youtube.com/watch?v=B8Y3-z9Bs9A) by BeCoin (Arabic)
+- [Coin des tages: Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by KryptoZenny ("Coin of the Day: Decred (DCR)")
+- [DCR DecreD Explose j'achete ou pas?](https://www.youtube.com/watch?v=6cWhwYQ9tbE) by CryptoforEveryOne ("Decred exploding, buy or not?")
 
 
 ## Discussions
