Media add translations

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -434,6 +434,8 @@ Decred Magazine engagement stats for August:
 - Re-tweets: 73
 - Social media followers across all platforms and accounts: 927
 
+Twitter users are more than welcome to support [@Decredmagazine](https://twitter.com/decredmagazine) with follows, likes and retweets to help spread the message.
+
 { _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
 
 **Selected articles:**
@@ -464,7 +466,7 @@ Decred Magazine engagement stats for August:
 
 **Translations:**
 
-- {}
+- Decred Journal April-July 2022 got a total of 6 new [translations](https://xaur.github.io/decred-news/). Thanks to @arij (Arabic), @Dominic (Chinese), and @kozel (Polish)!
 
 **Non-English content:**
 
