--- a/journal/202208.md
+++ b/journal/202208.md
@@ -478,15 +478,21 @@ Selected Twitter discussions:
 
 ## Markets
 
-In August DCR was trading between USD 25.60-70.40 / BTC 0.001139-0.003059. The average daily rate was $31.93.
+In August DCR was trading between USD 25.60-70.40 / BTC 0.00114-0.00306. The average daily rate was $31.93.
 
-Research & Analytics:
+["Inflection points"](https://www.decredmagazine.com/inflection-points/) by @Applesaucesome looked at the crypto markets and beyond, and the TA of August's DCR pump:
 
-- [Inflection points](https://www.decredmagazine.com/inflection-points/) by @Applesaucesome
+![](https://www.decredmagazine.com/content/images/size/w1000/2022/08/image-31.png) { import }
 
-*The following is not financial advice:*
+> The volume of that candle was massive. And I mean MASSIVE. Just on the DCR/USDT pairing there was nearly 2 million DCR traded back and forth.  That's 14% of the entire supply. Note: This doesn't mean that much was bought or sold but the total combined amount bought + sold.
 
-"In conclusion, the markets are likely going to pull back but if you're a bull then it could present one last solid buying opportunity.  If you're a bear then this would be the time to sell more.  Crypto still looks terrible right now but I'm not selling."
+*The following quote is not financial advice:*
+
+> In conclusion, the markets are likely going to pull back but if you're a bull then it could present one last solid buying opportunity. If you're a bear then this would be the time to sell more. Crypto still looks terrible right now but I'm not selling.
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-08/700/DEX_Monthly_Vol_USD.png)
+
+_Image: DCRDEX monthly volume in USD._
 
 
 ## Relevant External
