--- a/journal/202208.md
+++ b/journal/202208.md
@@ -59,8 +59,7 @@ dcrd v1.7.4 was released to fix testnet mining algorithm as detailed below. It w
 
 Merged in `master` and backported to v1.7.4 release:
 
-- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, a bunch of ASICs joined Decred tesnet and ramped up the difficulty, which effectively stalled the network. To limit the type of games that ASICs can play on testnet two new rules are introduced: a limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply.
-  - { _Do we know how many Th/s or ASIC units were used to stall testnet? Any other details to entertain the reader with?_ }
+- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, a few ASICs joined Decred tesnet and ramped up the difficulty, which effectively stalled the network. The unusual hashrate of 78 Th/s (equivalent of 2 Antminer DR5) was mining for ~5 hours. To limit the type of games that ASICs can play on testnet two new rules are introduced: a limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply.
 
 - Modified handling of blocks with too few voting tickets to also [copy the regular transactions](https://github.com/decred/dcrd/pull/2978/commits/659b7fed1f225861b8b689ead1a0466099992479) into an alternative block template in addition to the stake transactions. This makes template creation more robust in the case of duplicate spends and helps ensure that all transactions in an invalidated (under-voted) block are added to the alternative block templates. Previously all transactions were copied too but only in the next block, so this change removes an unnecessary delay.
 
@@ -68,7 +67,7 @@ Merged in `master` towards v1.8:
 
 - Made longer running `blockchain` tests [run in parallel](https://github.com/decred/dcrd/pull/2988) to reduce the overall testing time roughly in half.
 - Removed all code related to [previous script snapshots](https://github.com/decred/dcrd/pull/2989) now that address index has been removed and there are no other indexers that require access to previous scripts.
-- Maintenance { 2980 2983 2981 } and small fixes { 2987, 2991 }.
+- Maintenance and smaller fixes.
 
 
 ### dcrwallet
@@ -82,8 +81,7 @@ Merged in `master` and backported to v1.7.4 source-only release:
 
 Merged in `master`:
 
-- Formatted code with [Go 1.19](https://github.com/decred/dcrwallet/pull/2176) style. { _minor_ }
-- Updated [difficulty checks](https://github.com/decred/dcrwallet/pull/2181) to the new throttling on testnet3.
+- Updated [difficulty checks](https://github.com/decred/dcrwallet/pull/2181) to the new throttling rules on testnet3.
 
 
 ### dcrctl
@@ -100,7 +98,7 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 - Added the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
 - Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code to verify them.
 - Renamed "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
-- 4 fixes { 3783 3775 3784 3792 } and other internal updates.
+- ~4 fixes and other internal updates.
 
 
 ### Politeia
@@ -115,7 +113,6 @@ Backend:
 - Delete [expired user sessions](https://github.com/decred/politeia/pull/1669) on startup. Tests for the session database have been [rewritten](https://github.com/decred/politeia/pull/1674) to fix numerous issues.
 - Updated [`dbutil -dump`](https://github.com/decred/politeia/pull/1676) command to work with all of the user database implementations.
 - Freeze [Trillian trees](https://github.com/decred/politeia/pull/1670) that correspond to Politeia records that no longer allow updates (such as Censored or Archived). Politeia's use of Trillian is quite different from its intended use case and it results in high CPU load. Freezing some trees should reduce it.
-- Fixes { 1675 }
 
 Current GUI:
 
@@ -130,14 +127,12 @@ GUI remake on the new [plugin architecture](https://github.com/decred/politeiagu
 - Added [end-to-end tests](https://github.com/decred/politeiagui/pull/2803) based on Cypress.
 - Implemented RFP [proposals and submissions](https://github.com/decred/politeiagui/pull/2848).
 - Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui. Breakpoints control which layout is used to better match the user's screen size.
-- Fixes { 2839 2853x3 2850 }
-- Code refactoring and cleanup { 2834 2843 2854 }
+- ~ 5 fixes
+- Code refactoring and cleanup
 
 pi-ui shared library:
 
 - [Custom breakpoints](https://github.com/decred/pi-ui/pull/459) made reusable internally and by apps that consume `pi-ui`. Added [PostCSS](https://postcss.org/) for CSS processing.
-- Fixes { 458x2 }
-- Improvements { 458 }
 
 { image candidates: 2848 is fun }
 
@@ -176,22 +171,18 @@ August changes included in the v0.5 release:
 - Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
 - Embed site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
 - Updated [German](https://github.com/decred/dcrdex/pull/1815) translation.
-- Maintenance { 1753 1774 }
+- Code maintenance.
 
 Fixes included in v0.5:
 
-- Fixed confusing "connectivity restored" [notification](https://github.com/decred/dcrdex/pull/1719) on first connection. { _minor_ }
-- Fixed canceled orders showing as [100% filled](https://github.com/decred/dcrdex/pull/1744) { _minor_ }
 - Fixed several client wallet [hanging issues](https://github.com/decred/dcrdex/pull/1732).
-- Fixed a [deadlock](https://github.com/decred/dcrdex/pull/1756) in BTC SPV wallet. { _minor?_ }
+- Fixed a [deadlock](https://github.com/decred/dcrdex/pull/1756) in BTC SPV wallet.
 - Fixed [switching wallet type](https://github.com/decred/dcrdex/pull/1759) to SPV.
 - Fixed several [deadlock and lock contention](https://github.com/decred/dcrdex/pull/1739) issues in the trade engine.
 - Fixed having to [refresh Wallets page](https://github.com/decred/dcrdex/pull/1757) manually after creating a wallet.
-- Fixed incorrect [error return](https://github.com/decred/dcrdex/pull/1764) when looking up BTC outputs. { _minor_ }
 - Fixed [match status](https://github.com/decred/dcrdex/pull/1772) display for revoked matches.
-- Fixed [changing DEX server](https://github.com/decred/dcrdex/pull/1817) when the server is down. { _minor?_ }
 - Other backend fixes { 1751 1780 }
-- Other client fixes { 1736x2 1776 1799 1821 1829 }
+- Other client fixes { 1736x2 1776 1799 1821 1829 1719 1744 1764 1817 }
 
 Changes towards the next v0.6 release:
 
@@ -207,11 +198,9 @@ Changes towards the next v0.6 release:
 - Updated Node.js [dependencies](https://github.com/decred/dcrdex/pull/1792) for the v0.6 dev cycle.
 - Implemented [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1786) for DCR and ETH. It allows to correctly track locked coins across changes to wallet configuration.
 - Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating translations or adding new languages.
-- Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822). { _group in maintenance?_ }
-- Maintenance { 1795 1801 }
-- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761). { _minor_ }
-- Fixed [API errors](https://github.com/decred/dcrdex/pull/1806) showing up in bell notifications.
-- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 }
+- Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822).
+- Code maintenance { 1795 1801 }
+- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 1761 1806 }
 - Fixes { 1802 1809 }
 
 Ethereum support:
@@ -251,7 +240,7 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 - Dependency and toolchain [updates](https://github.com/decred/dcrdata/pull/1931).
 - Fixed treasury transaction [pagination](https://github.com/decred/dcrdata/pull/1929).
 - Fixed [incorrect treasury](https://github.com/decred/dcrdata/pull/1930) balance on home page.
-- 3 smaller bug fixes. { 1926 1927 1928 }
+- ~3 smaller bug fixes.
 
 
 ### decred.org
