Dev sum more fixes

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -162,8 +162,6 @@ DCRDEX v0.5.2 has been released! Check the [v0.5.0 release](https://github.com/d
 
 Note that there has been no announcement yet because DCRDEX is coordinating with the other components (such as Decrediton).
 
-{ _Improve grouping maybe_ }
-
 August changes included in the v0.5 release:
 
 - Moved [wiki contents](https://github.com/decred/dcrdex/pull/1714) to [docs/wiki](https://github.com/decred/dcrdex/tree/master/docs/wiki) in the main repo. Now all docs are in one place and can be updated and reviewed by more contributors via the pull request workflow.
@@ -181,8 +179,7 @@ Fixes included in v0.5:
 - Fixed several [deadlock and lock contention](https://github.com/decred/dcrdex/pull/1739) issues in the trade engine.
 - Fixed having to [refresh Wallets page](https://github.com/decred/dcrdex/pull/1757) manually after creating a wallet.
 - Fixed [match status](https://github.com/decred/dcrdex/pull/1772) display for revoked matches.
-- Other backend fixes { 1751 1780 }
-- Other client fixes { 1736x2 1776 1799 1821 1829 1719 1744 1764 1817 }
+- ~10 other client fixes and ~2 backend/internal fixes.
 
 Changes towards the next v0.6 release:
 
@@ -199,9 +196,8 @@ Changes towards the next v0.6 release:
 - Implemented [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1786) for DCR and ETH. It allows to correctly track locked coins across changes to wallet configuration.
 - Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating translations or adding new languages.
 - Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822).
-- Code maintenance { 1795 1801 }
-- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 1761 1806 }
-- Fixes { 1802 1809 }
+- Code maintenance.
+- ~11 client fixes and ~2 backend/internal fixes.
 
 Ethereum support:
 
