--- a/journal/202208.md
+++ b/journal/202208.md
@@ -12,7 +12,7 @@ Highlights of August: {
 
 - DCRDEX v0.5.2 is out for impatient traders. Decrediton integration update is in the works.
 
-- decred.org overhaul
+- decred.org overhaul proposal passed and deployed
 
 - 
 
@@ -134,7 +134,9 @@ pi-ui shared library:
 
 - [Custom breakpoints](https://github.com/decred/pi-ui/pull/459) made reusable internally and by apps that consume `pi-ui`. Added [PostCSS](https://postcss.org/) for CSS processing.
 
-{ image candidates: 2848 is fun }
+![](https://user-images.githubusercontent.com/22639213/185235579-3b3c18ca-c675-4e96-9e57-afb106d65b50.png\) { import 2848 }
+
+_Image: Updated RFP proposal view in Politeia._
 
 
 ### Lightning Network
@@ -203,7 +205,9 @@ Ethereum support:
 
 - Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent chain (such as Ethereum).
 
-{ image candidates: illustration of 1622 would be cool, 1700 (!) }
+![](https://user-images.githubusercontent.com/6109680/177863406-27c635bf-c958-467a-ad78-22dc1187f29c.png) { import 1700 }
+
+_Image: DCRDEX layout for tablet screens._
 
 
 ### GoDCR
@@ -226,7 +230,9 @@ dcrlibwallet shared library:
 - Extracted Politeia into a [standalone package](https://github.com/planetdecred/dcrlibwallet/pull/262).
 - Implemented API for fetching data from [external services](https://github.com/planetdecred/dcrlibwallet/pull/255) such as the dcrdata block explorer and exchanges.
 
-{ image candidates: 975 1036 }
+![](https://user-images.githubusercontent.com/27733432/185481737-3ba4b62a-bff3-4711-b338-21958d346270.png) { import 1036 }
+
+_Image: New Settings design in GoDCR._
 
 
 ### dcrdata
@@ -271,7 +277,7 @@ Other site changes:
 - Updated [Matrix support](https://github.com/decred/dcrweb/pull/1060) link. Now [decred.org/matrix-support](https://decred.org/matrix-support/) redirects to #support chat room in our self-hosted Element client.
 - Removed 4 [defunct exchanges](https://github.com/decred/dcrweb/pull/1059) and 4 unmaintained wallets. Updated links.
 
-{ image of the new website is a must! }
+_Image: New decred.org design. { import }_
 
 
 ### Other
@@ -449,7 +455,7 @@ In August DCR was trading between USD 25.60-70.40 / BTC 0.00114-0.00306. The ave
 
 > In conclusion, the markets are likely going to pull back but if you're a bull then it could present one last solid buying opportunity. If you're a bear then this would be the time to sell more. Crypto still looks terrible right now but I'm not selling.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-08/700/DEX_Monthly_Vol_USD.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-08/700/DEX_Monthly_Vol_USD.png) { import }
 
 _Image: DCRDEX monthly volume in USD._
 
@@ -477,7 +483,6 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred
 - reviews and feedback: davecgh
-- title image: {}
 - funding: Decred stakeholders
