Dev polish part 1

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -2,7 +2,7 @@
 
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
-_Image: "Inspired by" @saender's new decred.org design._
+_Image: "Inspired" by @saender's new decred.org design._
 
 Highlights of August: {
 
@@ -59,9 +59,9 @@ dcrd v1.7.4 was released to fix testnet mining algorithm as detailed below. It w
 
 Merged in `master` and backported to v1.7.4 release:
 
-- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, a few ASICs joined Decred tesnet and ramped up the difficulty, which effectively stalled the network. The unusual hashrate of 78 Th/s (equivalent of 2 Antminer DR5) was mining for ~5 hours. To limit the type of games that ASICs can play on testnet two new rules are introduced: a limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply.
+- Enforced [difficulty throttling](https://github.com/decred/dcrd/pull/2978) on testnet. Normally ASICs are not expected on testnet and blocks are mined with "slow" CPU mining, since it's not reasonable to require high-powered hardware to run tesnet. There is no financial incentive either because tesnet coins have no value and ASIC miners have a better choice to mine mainnet coins for profit. Despite that, an unusual hashrate of ~78 Th/s (equivalent of 2 Antminer DR5) joined Decred tesnet and mined for ~5 hours, which ramped up the difficulty and effectively stalled the network. To limit the type of games that ASICs can play on testnet two new rules are introduced: a limit on maximum allowed difficulty and a limit on block production rate once maximum difficulty is reached. This should keep CPU mining feasible even in the presence of GPUs and ASICs. It should be noted that this solution is only suitable on a test network where no real monetary value is in play and thus the typical game theory mechanics do not apply.
 
-- Modified handling of blocks with too few voting tickets to also [copy the regular transactions](https://github.com/decred/dcrd/pull/2978/commits/659b7fed1f225861b8b689ead1a0466099992479) into an alternative block template in addition to the stake transactions. This makes template creation more robust in the case of duplicate spends and helps ensure that all transactions in an invalidated (under-voted) block are added to the alternative block templates. Previously all transactions were copied too but only in the next block, so this change removes an unnecessary delay.
+- Optimized handling of blocks with too few ticket votes to also [copy the regular transactions](https://github.com/decred/dcrd/pull/2978/commits/659b7fed1f225861b8b689ead1a0466099992479) into an alternative block template in addition to the stake transactions. This makes template creation more robust in the case of duplicate spends and helps ensure that all transactions in an invalidated (under-voted) block are added to alternative block templates. Previously all transactions were copied too but only in the next block, so this change removes an unnecessary delay.
 
 Merged in `master` towards v1.8:
 
@@ -88,7 +88,7 @@ Merged in `master`:
 
 _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd and dcrwallet._
 
-- Updated to latest Go [modules](https://github.com/decred/dcrctl/pull/49) and [GitHub action](https://github.com/decred/dcrctl/pull/48) versions.
+- Updated to latest [Go modules](https://github.com/decred/dcrctl/pull/49) and [GitHub action](https://github.com/decred/dcrctl/pull/48) versions.
 
 
 ### Decrediton
@@ -96,8 +96,8 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - Added the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
-- Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code to verify them.
-- Renamed "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
+- Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and has proper links to verify them in dcrd's source code.
+- Corrected "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
 - ~4 fixes and other internal updates.
 
 
@@ -126,13 +126,13 @@ GUI remake on the new [plugin architecture](https://github.com/decred/politeiagu
 - Added various information to the `pi` plugin: proposal status, vote duration, quorum, billing status changes, and error messages.
 - Added [end-to-end tests](https://github.com/decred/politeiagui/pull/2803) based on Cypress.
 - Implemented RFP [proposals and submissions](https://github.com/decred/politeiagui/pull/2848).
-- Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui. Breakpoints control which layout is used to better match the user's screen size.
-- ~ 5 fixes
+- Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui. Breakpoints control which layout is used to match the user's screen size.
+- ~5 fixes
 - Code refactoring and cleanup
 
 pi-ui shared library:
 
-- [Custom breakpoints](https://github.com/decred/pi-ui/pull/459) made reusable internally and by apps that consume `pi-ui`. Added [PostCSS](https://postcss.org/) for CSS processing.
+- [Custom breakpoints](https://github.com/decred/pi-ui/pull/459) made reusable internally and by apps that consume `pi-ui`. Wired up [PostCSS](https://postcss.org/) for CSS processing.
 
 ![](https://user-images.githubusercontent.com/22639213/185235579-3b3c18ca-c675-4e96-9e57-afb106d65b50.png) { import 2848 }
 
@@ -152,7 +152,7 @@ LN Daemon:
 [Liquidity Provider Daemon](https://github.com/decred/dcrlnlpd):
 
 - Configured [GitHub Actions](https://github.com/decred/dcrlnlpd/pull/5) for automated builds.
-- Documented how the software [takes control](https://github.com/decred/dcrlnlpd/pull/4) of the outbound channels.
+- Documented how the software [takes control](https://github.com/decred/dcrlnlpd/pull/4) of outbound channels.
 - Added [TLS encryption](https://github.com/decred/dcrlnlpd/pull/6) support.
 
 
@@ -160,7 +160,7 @@ LN Daemon:
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
-DCRDEX v0.5.2 has been released! Check the [v0.5.0 release](https://github.com/decred/dcrdex/releases/tag/v0.5.0) first for a long list of features, fixes and upgrading instructions since v0.4. Starting with the [v0.5.2 release](https://github.com/decred/dcrdex/releases/tag/v0.5.2) DCRDEX now publishes its own binaries. As always, [verifying them](https://docs.decred.org/advanced/verifying-binaries) is strongly recommended.
+DCRDEX v0.5.2 has been released! Check the [v0.5.0 release](https://github.com/decred/dcrdex/releases/tag/v0.5.0) first for a long list of features, fixes and instructions to upgrade from v0.4. Starting with the [v0.5.2 release](https://github.com/decred/dcrdex/releases/tag/v0.5.2) DCRDEX now publishes its own binaries. As always, [verifying them](https://docs.decred.org/advanced/verifying-binaries) is strongly recommended.
 
 Note that there has been no announcement yet because DCRDEX is coordinating with the other components (such as Decrediton).
 
@@ -169,7 +169,7 @@ August changes included in the v0.5 release:
 - Moved [wiki contents](https://github.com/decred/dcrdex/pull/1714) to [docs/wiki](https://github.com/decred/dcrdex/tree/master/docs/wiki) in the main repo. Now all docs are in one place and can be updated and reviewed by more contributors via the pull request workflow.
 - Rewritten much of [README](https://github.com/decred/dcrdex/pull/1747) for the v0.5 release.
 - Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
-- Embed site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
+- Embeded site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
 - Updated [German](https://github.com/decred/dcrdex/pull/1815) translation.
 - Code maintenance.
 
