--- a/journal/202208.md
+++ b/journal/202208.md
@@ -358,7 +358,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 42 nodes (-
 
 ## Ecosystem
 
-VSP [synergy-crypto.net](https://vspd.synergy-crypto.net/) announced on its website that it is closing and is not accepting new tickets. Tickets with already paid fees will be voted as usual, 180 as of Sep 1.
+VSP [synergy-crypto.net](https://vspd.synergy-crypto.net/) announced on its website that it is closing and is not accepting new tickets. Tickets with already paid fees will be voted as usual (180 tickets as of Sep 1).
 
 ViaBTC [announced](https://support.viabtc.com/hc/en-us/articles/9197412971417-Announcement-on-Putting-Offline-DCR-Mining-Pool) on Aug 5 that they will shut down DCR mining pool on Aug 10. Users were asked to withdraw or convert their DCR by Aug 17, and any DCR remaining by that deadline will be automatically converted to USDT.
 
@@ -403,15 +403,16 @@ Twitter users are more than welcome to support [@Decredmagazine](https://twitter
 
 - [Introducing Decred community member João Paulo Sant'Anna](https://www.decredmagazine.com/introducing-decred-community-member-joao-paulo-santanna/) by @phoenixgreen
 - [Introducing Decred developer Philemon](https://www.decredmagazine.com/introducing-decred-developer-philemon/) by @phoenixgreen
-- [How Decred contributed to a more transparent election in Brazil](https://www.decredmagazine.com/how-decred-how-decred-contributed-to-a-more-transparent-election-in-brazil/) by @JoaoPauloSantAnnadaSilva
+- [How Decred contributed to a more transparent election in Brazil](https://www.decredmagazine.com/how-decred-how-decred-contributed-to-a-more-transparent-election-in-brazil/) by @João
 - [Peer-to-peer electronic corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra
+- [Inflection points](https://www.decredmagazine.com/inflection-points/) technical analysis by @Applesaucesome
 
 **Videos:**
 
 - [Decentralised treasury spending - Decred Fundamentals](https://www.youtube.com/watch?v=A0NR5ySIqoI) by @phoenixgreen
 - [DCRDATA Decred's treasury - Decred Fundamentals](https://www.youtube.com/watch?v=lQebfO6qIoo) by @phoenixgreen
-- [Why Decred will explode! $DCR crypto price prediction!](https://www.youtube.com/watch?v=0PerKqUmmfU) by Minted Max - not a typical price talk video.
-- [Decred and the future of web3 - State of the market with BlockchainBuck](https://www.youtube.com/watch?v=n3welZEDchU) by @phoenixgreen and @Exitus
+- [Why Decred will explode! $DCR crypto price prediction!](https://www.youtube.com/watch?v=0PerKqUmmfU) by Minted Max - better than a typical price talk video
+- [Decred and the future of web3 - State of the Market with BlockchainBuck](https://www.youtube.com/watch?v=n3welZEDchU) by @phoenixgreen and @Exitus
 - [Decred News Update - Development work surging across many repos - LN, DCRDEX, Politeia, DAO & more](https://www.youtube.com/watch?v=EPcUkmaaJlQ) by @Exitus
 
 **Art and fun:**
@@ -445,7 +446,7 @@ Selected Twitter discussions:
 
 In August DCR was trading between USD 25.60-70.40 / BTC 0.00114-0.00306. The average daily rate was $31.93.
 
-["Inflection points"](https://www.decredmagazine.com/inflection-points/) by @Applesaucesome looked at the crypto markets and beyond, and the TA of August's DCR pump:
+Another [review](https://www.decredmagazine.com/inflection-points/) of crypto and stock markets by @Applesaucesome mentions unusual numbers in August's DCR pump:
 
 ![](https://www.decredmagazine.com/content/images/size/w1000/2022/08/image-31.png) { import }
 
