--- a/journal/202209.md
+++ b/journal/202209.md
@@ -419,7 +419,8 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 **Non-English content:**
 
-- {}
+- [Coin des tages: Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by KryptoZenny ("Coin of the Day: Decred (DCR)")
+- https://www.youtube.com/watch?v=SssaKluRSJI&t=649 { Exitus: I can't speak German but he seems quite happy to see regular news updates }
 
 
 ## Discussions
