--- a/journal/202209.md
+++ b/journal/202209.md
@@ -90,7 +90,9 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- {}
+- Add custom pi-UI [media breakpoints](https://github.com/decred/decrediton/pull/3799).
+- Update [German translations](https://github.com/decred/decrediton/pull/3798).
+- Bump to [dcrdex v0.5.2](https://github.com/decred/decrediton/pull/3791).
 
 
 ### Politeia
