--- a/journal/202209.md
+++ b/journal/202209.md
@@ -105,7 +105,8 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check https://github.com/decred/vspd/commits/master ._}
 
-- {}
+- Make [database backups](https://github.com/decred/vspd/pull/353) optional.
+- [Move vspd](https://github.com/decred/vspd/pull/352) into command directory.
 
 
 ### dcrstakepool
