--- a/journal/202209.md
+++ b/journal/202209.md
@@ -120,7 +120,13 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 
 }
 
-- {}
+DCR LN Liquidity Provider Daemon:
+
+- [Change the policy](https://github.com/decred/dcrlnlpd/pull/7) for closing channels from an absolute policy (close all channels that don't meet the policy conditions) to a relative policy (based on activity scoring for each channel).
+
+Note: 
+
+The policy enforcement only kicks off after the on-chain wallet balance drops below a new config parameter. The intended result is that channels will not be closed unless the liquidity provider requires coins to fund new channels, preferring to close channels with a combination of low activity during its lifetime.'
 
 
 ### DCRDEX
