--- a/journal/202209.md
+++ b/journal/202209.md
@@ -177,7 +177,9 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- {}
+Known Issue:
+
+- `treasurybases` and `treasuryadds` outputs are [not spendable](https://github.com/decred/dcrdata/issues/1932) and should be labeled as "Not Applicable" instead of "False".
 
 
 ### TinyDecred
