Dev DCRDEX part 3

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -150,10 +150,14 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 { _Check which fixes were made/backported to the v0.5 release branch_ }
 
-Merged in `master` and backported to v0.5.3 release:
+Merged in v0.5.3 release:
 
 - Added external [fallback API for fee info](https://github.com/decred/dcrdex/pull/1695) for BTC RPC wallets ([mempool.space](https://mempool.space/).
 - Fixed swap/redemption [fee info](https://github.com/decred/dcrdex/pull/1827) and added columns for base and quote fee assets to the CSV export.
+- Fixed 4 [edge cases](https://github.com/decred/dcrdex/pull/1849) with disconnection during trades and invalid responses from the server.
+- Fixed candles [delta overflow](https://github.com/decred/dcrdex/pull/1872) bug.
+- Removed [default port](https://github.com/decred/dcrdex/commit/e9ca06d353c7aa1f66a120ac8b9b8a6cc021983e) for Electrum.
+- Backported several [other fixes](https://github.com/decred/dcrdex/pull/1850) from `master`.
 
 User-facing changes merged in `master`:
 
@@ -161,25 +165,29 @@ User-facing changes merged in `master`:
 - Improved notifications for [placed orders](https://github.com/decred/dcrdex/pull/1803).
 - Added a button to [disable a wallet](https://github.com/decred/dcrdex/pull/1804).
 - Added native [BCH SPV wallet](https://github.com/decred/dcrdex/pull/1635) support. "Native" means the wallet is fully managed by the DEX client without the need to download/install/configure external software, while "SPV" means it works without downloading the BCH blockchain. This currently relies on a [temporary fork](https://github.com/buck54321/neutrino-bch) { or dcrlabs fork? } of [gcash/neutrino](https://github.com/gcash/neutrino) which integrates [upstream](https://github.com/lightninglabs/neutrino) changes needed by DCRDEX, until those changes are merged by the gcash project.
-- Show [recently matched orders](https://github.com/decred/dcrdex/pull/1663).
+- Show [recently matched orders](https://github.com/decred/dcrdex/pull/1663) in the [order](https://github.com/decred/dcrdex/pull/1856) they happened.
+- Show [system tray icon](https://github.com/decred/dcrdex/pull/1828) on Windows, macOS, and Linux.
+- Added native [LTC SPV wallet](https://github.com/decred/dcrdex/pull/1750), similar to one for BCH.
 - Fixed incorrect market [volume](https://github.com/decred/dcrdex/pull/1837) on the Wallets page. { minor? }
 - Fixed confusing [order of steps](https://github.com/decred/dcrdex/pull/1830) on the Order page and added future steps.
-- Other fixes { 1813 1843 1841 }
+- Other fixes { 1813 1843 1841 1855 }
 
 Internal changes merged in `master`:
 
 - Replace uses of `settxfee` method with a more robust [`fee_rate` argument](https://github.com/decred/dcrdex/issues/1706) to `sendtoaddress`. It is only supported with recent versions of Bitcoin Core and its clones. Wallets based on older Bitcoin Core will continue to use `settxfee` (BCH, DOGE, ZEC).
 - Added a tool for finding missing notification [translations](https://github.com/decred/dcrdex/pull/1835). Also, notification will fall back to an English string if a translation is missing.
-- Other fixes { 1838 1846 1852 }
-- Code maintenance { 1836 1831 }
+- Clients will no longer accept signatures of [truncated messages](https://github.com/decred/dcrdex/pull/1526) - a bug where in some places truncated message data was signed and verified without getting hashed first. The PR explains why this bug was hard to exploit but also quite tricky to fix. This change is the last step of the 4-stage plan to fix it with minimum disruption to older clients.
+- Other fixes { 1838 1846 1852 1860 1873 1876 }
+- Code maintenance { 1836 1831 1859 1851 }
 - Testing { 1742 }
-- Documentation { 1842 1839 }
+- Documentation { 1842 1839 1824 }
 
 Ethereum support:
 
 - [Babysit](https://github.com/decred/dcrdex/pull/1638) refund and redeem transactions. Unlike the UTXO coins, Ethereum's ability to replace one transaction with another with the same nonce requires a more involved tracking.
+- Update [fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined (exact fee cannot be known in advance for Ethereum-based assets).
 
-{ maybe mention https://github.com/dcrlabs/neutrino-bch and https://github.com/dcrlabs/neutrino-ltc }
+DCRDEX aims to support trading with lightweight wallets, which is a massive user experience boost compared to having to download full blockchains. For Decred it uses the native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) though, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged sooner. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
 
 { image candidates: 1688 }
 
